@@ -42,7 +42,8 @@ export(is.igraph, are.connected, print.igraph, summary.igraph, is.directed,
 
 export(graph, graph.adjacency, graph.star, graph.tree, graph.lattice,
        graph.ring, graph.full, graph.atlas, graph.data.frame, graph.edgelist,
-       graph.extended.chordal.ring, line.graph, graph.de.bruijn, graph.kautz)
+       graph.extended.chordal.ring, line.graph, graph.de.bruijn, graph.kautz,
+       graph.formula)
 
 # games
 
